# wimbledon

./: .dockerignore  .env  .gitignore  Dockerfile  FLYIO.md  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements-dev.txt  tox.ini  uwsgi.ini
.github/workflows/: python-app-cd-flyio.yml  python-app-ci.yml
docker/fixtures/: tournaments_fixture.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: matchesapi.js
frontend/src/components/: MataMataView.vue
wimbledon/accounts/: README.md  apps.py  views.py
wimbledon/accounts/tests/: fixtures.py  test_auth_api.py
wimbledon/base/: apps.py  views.py
wimbledon/base/templates/base/: apihome.html
wimbledon/base/tests/: test_status.py
wimbledon/core/: admin.py  apps.py  models.py  schemas.py  views.py
wimbledon/core/migrations/: 0001_initial.py  0002_create_tournament.py  0003_delete_activitylog.py  0004_competitor.py  0005_match.py  0006_alter_competitor_tournament_alter_match_tournament.py  0007_match_winner.py  0008_alter_competitor_unique_together.py  0009_match_game_extra.py  0010_match_auto_win.py
wimbledon/core/service/: tournaments_svc.py
wimbledon/core/tests/: conftest.py  test_api_01_novos_torneios.py  test_api_listar_tournaments.py  test_svc_01_novos_torneios.py  test_svc_03_iniciar_partidas.py  test_svc_04_listar_partidas.py  test_svc_05_cadastrar_resultados.py  test_svc_06_listar_top4.py  test_svc_competitors.py  test_svc_matches.py  test_tournaments.py
wimbledon/wimbledon/: api.py  settings.py  wsgi.py
